Fixed location of dropdown menu

--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
 
         <!-- Browse All Activities - Or choose a Region to filter by location -->
         <section class="regional-activities">
-            <select class="activity-option-dropdown" name="" id="">
-                <option value="Choose a region">Choose a Region</option>
-            </select>
+            <div class="select-menu">
+                <hr>
+                <select class="activity-option-dropdown" name="" id="">
+                    <option value="Choose a region">Choose a Region</option>
+                </select>
+                <hr>
+            </div>
 
             <div class="location-cards-container">
                 <div class="location-card oregon-coast cannon-beach-tidepools">
