Hover on menu, tidy up text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <!-- Travel Northwest Header (need better logo?) -->
+        <!-- Travel Northwest Header -->
         <div class="upper-header">
             <nav class="nav-left">
                 <a class="site-header-logo" href=".">
@@ -54,9 +54,8 @@
     </header>
 
     <main>
-        <!-- Photo Carousel - scroll to see examples from each region -->
+        <!-- REGIONAL PHOTO CAROUSEL - scroll to see examples from each region -->
         <section class="photo-carousel-container">
-
 
             <div class="carousel-card-deck">
                 <div class="carousel-card mt-rainier-np fade">
@@ -76,20 +75,18 @@
                     <h3 class="slide-caption">Seattle, Washington</h3>
                 </div>
 
-                <!-- Next and previous buttons (see w3schools tutorial) -->
+                <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
             </div>
-
 
         </section>
 
-        <!-- Browse All Activities - Or choose a Region to filter by location -->
+        <!-- ACTIVITY CARDS - Filter by region or view all -->
         <section class="regional-activities">
             <div class="select-menu">
                 <hr>
-                <select class="activity-option-dropdown" name="" id="">
+                <select class="activity-option-dropdown" name="Dropdown Menu">
                     <option value="Choose a region">Choose a Region</option>
                 </select>
                 <hr>
@@ -97,63 +94,63 @@
 
             <div class="location-cards-container">
                 <div class="location-card oregon-coast cannon-beach-tidepools">
-                    <img src="img/starfish-cannon-beach-crop.png" alt="">
+                    <img src="img/starfish-cannon-beach-crop.png" alt="Orange and purple starfish">
                     <div class="card-text-container">
                         <h3>Cannon Beach Tidepools</h3>
                         <p>Starfish glimmer from rocks at low tide.</p>
                     </div>
                 </div>
                 <div class="location-card mt-hood rafting">
-                    <img src="img/white-water-rafting-small.jpg" alt="">
+                    <img src="img/white-water-rafting-small.jpg" alt="Whitewater rafting family">
                     <div class="card-text-container">
                         <h3>Whitewater Rafting</h3>
-                        <p>Ride the waves!</p>
+                        <p>You won't fall in - promise!</p>
                     </div>
                 </div>
                 <div class="location-card seattle glass-garden">
-                    <img src="img/chihuly-sculpture-garden.jpg" alt="">
+                    <img src="img/chihuly-sculpture-garden.jpg" alt="Glass sculptures in a garden">
                     <div class="card-text-container">
                         <h3>Chihuly Sculpture Garden</h3>
                         <p>Glass art in the outdoors.</p>
                     </div>
                 </div>
                 <div class="location-card seattle chocolate-tour">
-                    <img src="img/shop-theo.jpg" alt="">
+                    <img src="img/shop-theo.jpg" alt="Chocolate bars">
                     <div class="card-text-container">
                         <h3>Theo Chocolate Factory</h3>
-                        <p>Free samples on the tour!</p>
+                        <p>You won't fall in - promise!</p>
                     </div>
                 </div>
                 <div class="location-card seattle whale-watching">
-                    <img src="img/orca-pod-lighthouse-crop.jpg" alt="">
+                    <img src="img/orca-pod-lighthouse-crop.jpg" alt="Orca whales with snowcapped mountain">
                     <div class="card-text-container">
-                        <h3>Whale watching</h3>
-                        <p>Orcas in the sound.</p>
+                        <h3>Whale Watching</h3>
+                        <p>The best kind of pod.</p>
                     </div>
                 </div>
                 <div class="location-card mt-hood waterfall-hike">
-                    <img src="img/north-falls-small-crop.jpg" alt="">
+                    <img src="img/north-falls-small-crop.jpg" alt="View from behind a waterfall">
                     <div class="card-text-container">
                         <h3>Waterfall Trails</h3>
                         <p>Hike the slopes of Mt. Hood.</p>
                     </div>
                 </div>
                 <div class="location-card seattle freemont-troll">
-                    <img src="img/freemont-scavenger-hunt-crop.jpg" alt="">
+                    <img src="img/freemont-scavenger-hunt-crop.jpg" alt="Troll sculpture under a bridge">
                     <div class="card-text-container">
                         <h3>Freemont Art District</h3>
                         <p>Track down the troll on an outdoor scavenger hunt.</p>
                     </div>
                 </div>
                 <div class="location-card seattle pike-place-market">
-                    <img src="img/pike-place-flowers-small.jpg" alt="">
+                    <img src="img/pike-place-flowers-small.jpg" alt="Flowers at an indoor market">
                     <div class="card-text-container">
                         <h3>Pike Place Market</h3>
                         <p>"The soul of Seattle."</p>
                     </div>
                 </div>
                 <div class="location-card mt-hood lavender">
-                    <img src="img/hood-river-lavender-crop.jpeg" alt="">
+                    <img src="img/hood-river-lavender-crop.jpeg" alt="Field full of purple lavender">
                     <div class="card-text-container">
                         <h3>Mt. Hood Lavender Farm</h3>
                         <p>Aromatherapy for the eyes.</p>
